# git-real

./: LICENSE  README.md
backend/: .env.example  .gitignore  Cargo.toml  log4rs.yml
backend/src/: api.rs  auth.rs  challenge.rs  commit.rs  executor.rs  main.rs  state.rs
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/challenge/: page.tsx
frontend/src/app/components/: Countdown.tsx  EditorWindow.tsx  MonacoTheme.tsx  Post.tsx  PrelineScript.tsx  Profile.tsx  SignIn.tsx
frontend/src/app/editor/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/start/: page.tsx
frontend/src/app/utilities/: fetchChallenge.ts
